fix(landingPage) - fixed the spacings

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -25,7 +25,7 @@ p {
 
 .card{
     background-color: #3E2C23; /* rich dark brown */
-    max-width: 800px;
+    max-width: 1300px;
     color: #F0E3CA;
     padding: 20px;
     margin: 20px auto;
