--- a/page/landingPage/assets/css/landingPage.css
+++ b/page/landingPage/assets/css/landingPage.css
@@ -74,8 +74,9 @@ form button:hover {
 .random-title {
     font-size: 3.4rem;
     font-family: 'Lucida Sans', sans-serif;
-    margin: 40px 2.6rem 20px;
+    margin: 10px 1.5rem 20px;
     font-style: italic;
+    text-align: center;
 }
 
 .food-card-container {
@@ -83,11 +84,12 @@ form button:hover {
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
+    margin-bottom: 2%;
 }
 
 .food-card {
     background: white;
-    width: 220px;
+    width: 320px;
     border-radius: 12px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     padding: 15px;
